--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,23 @@
-name: Python CI
+name: Python File Checkin
 
 on:
   push:
     branches:
-      - main  
-  pull_request:
-    branches:
-      - main 
+      - main  # Dieser Workflow wird ausgeführt, wenn auf den main-Branch gepusht wird.
 
 jobs:
-  build:
+  checkin-python:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository code
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.8'  # Verwende die gewünschte Python-Version
+        python-version: '3.12.6'
 
-    - name: Install dependencies
+    - name: Run Python Script
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 .
-      continue-on-error: true  
-
-    - name: Run tests
-      run: |
-        pytest
+        python hello.py # Hier Name vom pyfile angeben!
